# grid

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  build.sh
example/: CMakeLists.txt
example/bruteforce/: CMakeLists.txt  gen.cpp  pargen.cpp
example/helloworld/: main.cpp
example/ring/: CMakeLists.txt  main.cpp
example/sum/: CMakeLists.txt  main.cpp
example/vigenere/: main.cpp
module/: CMakeLists.txt
module/PGA/: CMakeLists.txt  Chromosome.cpp  Chromosome.h  GA.cpp  GA.h  Generator.h  GeneticOperation.h  GeneticOperationCrossover.cpp  GeneticOperationCrossover.h  GeneticOperationMutation.cpp  GeneticOperationMutation.h  GeneticOperationMutationSwap.cpp  GeneticOperationMutationSwap.h  GeneticOperationMutationSwapAll.cpp  Migrator.cpp  Migrator.h  PGA.h  Scheme.h  Select.h  SelectElitism.cpp  SelectElitism.h  SelectRandom.h  SelectTournament.cpp  SelectWorst.cpp  SelectWorst.h
module/PGA/crossover/: SinglePoint.h  Uniform.h  _shared.h
module/PGA/mutation/: Swap.h  SwapAll.h  WithProbability.h
module/PGA/select/: Elitism.h  Interface.h  Random.h  Tournament.h  Worst.h
module/cipher/: CMakeLists.txt  Cipher.h  Monoalphabetic.cpp  Monoalphabetic.h
module/fitness/: CMakeLists.txt  Fitness.h  L1.cpp  L1.h
module/mpi/: App.h  CMakeLists.txt
module/utils/: Common.h  Debug.h  Random.h
project/: CMakeLists.txt
project/FitnessLandscape/: .gitignore  CMakeLists.txt  EuklidBigramy.cpp  EuklidBigramy.h  EuklidTrigramy.cpp  EuklidTrigramy.h  FitnessFunctionss.cpp  FitnessFunctionss.h  FitnessLandscape.cpp  FitnessLandscape.h  FitnessLandscape.qsub  ManhattanBigramy.cpp  ManhattanBigramy.h  ManhattanTrigramy.cpp  ManhattanTrigramy.h  PocetTrigramov.h  PocetTrigramy.cpp  PracaSoSubormi.cpp  PracaSoSubormi.h  Statistika.cpp  Statistika.h  main.cpp  run_FitnessLandscape.sh
project/FitnessLandscape/src/: EuklidBigramy.cpp  ManhattanBigramy.cpp  ManhattanBigramy.h  ManhattanTrigramy.cpp  PocetTrigramy.cpp  PracaSoSubormi.cpp  PracaSoSubormi.h  main.cpp
project/HelloGrid/: .gitignore  CMakeLists.txt  HelloGrid.pbs
project/HelloGrid/src/: main.cpp
project/PGA/: .gitignore  CMakeLists.txt  GA.cpp  PGA.cpp  PGA_Mpi.cpp  PGA_single.cpp  main.cpp  main.h  main_GA.cpp  run_pga.sh
project/PGA/input/: .gitignore
project/PGA/input/ct/: 1000_1.txt  1000_10.txt  1000_100.txt  1000_11.txt  1000_12.txt  1000_13.txt  1000_14.txt  1000_15.txt  1000_16.txt  1000_17.txt  1000_18.txt  1000_19.txt  1000_2.txt  1000_20.txt  1000_21.txt  1000_22.txt  1000_23.txt  1000_24.txt  1000_25.txt  1000_26.txt  1000_27.txt  1000_28.txt  1000_29.txt  1000_3.txt  1000_30.txt  1000_31.txt  1000_32.txt  1000_33.txt  1000_34.txt  1000_35.txt  1000_36.txt  1000_37.txt  1000_38.txt  1000_39.txt  1000_4.txt  1000_40.txt  1000_41.txt  1000_42.txt  1000_43.txt  1000_44.txt  (+3960 more)
project/PGA/input/fitness_data/: 3.csv
project/PGA/input/key/: 1000_1.txt  1000_10.txt  1000_100.txt  1000_11.txt  1000_12.txt  1000_13.txt  1000_14.txt  1000_15.txt  1000_16.txt  1000_17.txt  1000_18.txt  1000_19.txt  1000_2.txt  1000_20.txt  1000_21.txt  1000_22.txt  1000_23.txt  1000_24.txt  1000_25.txt  1000_26.txt  1000_27.txt  1000_28.txt  1000_29.txt  1000_3.txt  1000_30.txt  1000_31.txt  1000_32.txt  1000_33.txt  1000_34.txt  1000_35.txt  1000_36.txt  1000_37.txt  1000_38.txt  1000_39.txt  1000_4.txt  1000_40.txt  1000_41.txt  1000_42.txt  1000_43.txt  1000_44.txt  (+3960 more)
project/PGA/input/pt/: 1000_1.txt  1000_10.txt  1000_100.txt  1000_11.txt  1000_12.txt  1000_13.txt  1000_14.txt  1000_15.txt  1000_16.txt  1000_17.txt  1000_18.txt  1000_19.txt  1000_2.txt  1000_20.txt  1000_21.txt  1000_22.txt  1000_23.txt  1000_24.txt  1000_25.txt  1000_26.txt  1000_27.txt  1000_28.txt  1000_29.txt  1000_3.txt  1000_30.txt  1000_31.txt  1000_32.txt  1000_33.txt  1000_34.txt  1000_35.txt  1000_36.txt  1000_37.txt  1000_38.txt  1000_39.txt  1000_4.txt  1000_40.txt  1000_41.txt  1000_42.txt  1000_43.txt  1000_44.txt  (+3938 more)
project/PGA/src/: PGA.cpp  stat.cpp
project/bruteforce/: gen.cpp  pargen.cpp
project/ga/: .gitignore  CMakeLists.txt  ga.pbs
project/helloworld/: CMakeLists.txt  main.cpp
project/pga/: .gitignore  CMakeLists.txt  main.cpp  pga.pbs  run.sh
project/ring/: main.cpp
project/sum/: main.cpp
project/vigenere/: CMakeLists.txt  main.cpp
scripts/: build_boost.sh  run.sh  run_FitnessLandscape.sh  run_PGA.sh
src/: CMakeLists.txt  Debug.h  MpiApp.cpp  MpiApp.h  Random.h  app.cpp  app.h
src/PGA/: CMakeLists.txt  Chromosome.cpp  Chromosome.h  Cipher.cpp  Cipher.h  Fitness.cpp  Fitness.h  FitnessL1.cpp  FitnessL1.h  GA.cpp  GA.h  GeneticOperation.cpp  GeneticOperation.h  GeneticOperationCrossover.cpp  GeneticOperationCrossover.h  GeneticOperationMutation.cpp  GeneticOperationMutation.h  GeneticOperationMutationSwap.cpp  GeneticOperationMutationSwap.h  GeneticOperationMutationSwapAll.cpp  GeneticOperationMutationSwapAll.h  Helpers.h  Migrator.cpp  Migrator.h  PGA.h  Scheme.h  SchemeGA.cpp  SchemeGA.h  Select.cpp  Select.h  SelectElitism.cpp  SelectElitism.h  SelectRandom.cpp  SelectRandom.h  SelectTournament.cpp  SelectTournament.h  Topology.h  main.cpp
src/PGA/input/: 177_1000_num.txt
(+6 files in other folders)
